<resources>
    <string name="app_name">My Calc huehue</string>
    <string name="One">1</string>
    <string name="Two">2</string>
    <string name="Three">3</string>
    <string name="Four">4</string>
    <string name="Five">5</string>
    <string name="Six">6</string>
    <string name="Seven">7</string>
    <string name="Eight">8</string>
    <string name="Nine">9</string>
    <string name="Zero">0</string>

    <string name="Clear">C</string>
    <string name="Expo">^</string>
    <string name="Brackets">( )</string>
    <string name="Add">+</string>
    <string name="Subtract">-</string>
    <string name="Multiply">*</string>
    <string name="Divide">/</string>
    <string name="Decimal">.</string>
    <string name="PlusMinus">+/-</string>
    <string name="Equals">=</string>
    <string name="Percent">%</string>

    <string name="Bkspc">Bkspc</string>

    <string name="Calculate">Calculate</string>
    <string name="Display">Enter an expression</string>>
</resources>